# 2fa_react_fastapi

./: README.md  docker-compose.yaml  makefile
backend/: Dockerfile  makefile  pyproject.toml  users.json
backend/src/: main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Footer.tsx  Header.tsx  LoreBlurAuth.tsx  LoreBlurQRCode.tsx  Sidebar.tsx  index.css  main.tsx  minortitle.tsx
